--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,13 @@ jobs:
 
       - run:
           command: |
+            echo "Branch: $CIRCLE_BRANCH"
+            echo "Project: $CIRCLE_REPOSITORY_URL"
+            echo " - Username: $CIRCLE_PROJECT_USERNAME"
+            echo " - Repository: $CIRCLE_PROJECT_REPONAME"
+            echo "Pull request: $CIRCLE_PULL_REQUEST"
+            echo " - Username: $CIRCLE_PR_USERNAME"
+            echo " - Repository: $CIRCLE_PR_REPONAME"
             if [[ $(echo "$CIRCLE_PROJECT_USERNAME") -eq "gruelbox" ]]; then
               mvn -B -Pintegration-test clean install -Dcypress.command=runrecord -DskipSlowTests=true -Dskip.surefire.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -T 1C
             else
