--- a/orko-app/pom.xml
+++ b/orko-app/pom.xml
@@ -108,13 +108,28 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <createDependencyReducedPom>true</createDependencyReducedPom>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
               <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>com.gruelbox.orko.app.monolith.MonolithApplication</mainClass>
                 </transformer>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                   <addHeader>false</addHeader>
                 </transformer>
               </transformers>
@@ -126,24 +141,24 @@
         <groupId>de.jutzig</groupId>
         <artifactId>github-release-plugin</artifactId>
         <configuration>
-            <description>${project.version}</description>
-            <releaseName>${project.version}</releaseName>
-            <repositoryId>gruelbox/orko</repositoryId>
-            <tag>${project.version}</tag>
-            <fileSets>
-              <fileSet>
-                <directory>${project.basedir}</directory>
-                <includes>
-                    <include>example-config.yml</include>
-                </includes>
-              </fileSet>
-              <fileSet>
-                <directory>${project.build.directory}</directory>
-                <includes>
-                    <include>${project.artifactId}.jar</include>
-                </includes>
-              </fileSet>
-            </fileSets>
+          <description>${project.version}</description>
+          <releaseName>${project.version}</releaseName>
+          <repositoryId>gruelbox/orko</repositoryId>
+          <tag>${project.version}</tag>
+          <fileSets>
+            <fileSet>
+              <directory>${project.basedir}</directory>
+              <includes>
+                <include>example-config.yml</include>
+              </includes>
+            </fileSet>
+            <fileSet>
+              <directory>${project.build.directory}</directory>
+              <includes>
+                <include>${project.artifactId}.jar</include>
+              </includes>
+            </fileSet>
+          </fileSets>
         </configuration>
       </plugin>
     </plugins>
