--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +11,7 @@
     <connection>scm:git:https://github.com/gruelbox/orko.git</connection>
     <developerConnection>scm:git:git@github.com:gruelbox/orko.git</developerConnection>
     <url>https://github.com/gruelbox/orko</url>
-    <tag>HEAD</tag>
+    <tag>0.11.2</tag>
   </scm>
 
   <issueManagement>
@@ -42,7 +40,7 @@
 
   <groupId>com.gruelbox</groupId>
   <artifactId>orko-parent</artifactId>
-  <version>0.11.2-SNAPSHOT</version>
+  <version>0.11.2</version>
   <packaging>pom</packaging>
 
   <modules>
