Use sandbox for now for Kucoin in E2E tests

--- a/orko-app/integration-test-config.yml
+++ b/orko-app/integration-test-config.yml
@@ -18,6 +18,9 @@ jerseyClient:
   timeout: 5000ms
   connectionTimeout: 5000ms
   connectionRequestTimeout: 5000ms
+exchanges:
+  kucoin: 
+    sandbox: true
 server:
   type: simple
   rootPath: /api/
