--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -123,11 +123,11 @@
     </dependency>
     <dependency>
       <groupId>${xchange.groupid}</groupId>
-      <artifactId>xchange-coinbasepro</artifactId>
+      <artifactId>xchange-stream-coinbasepro</artifactId>
     </dependency>
     <dependency>
       <groupId>${xchange.groupid}</groupId>
-      <artifactId>xchange-binance</artifactId>
+      <artifactId>xchange-stream-binance</artifactId>
     </dependency>
     <dependency>
       <groupId>${xchange.groupid}</groupId>
@@ -135,7 +135,7 @@
     </dependency>
     <dependency>
       <groupId>${xchange.groupid}</groupId>
-      <artifactId>xchange-bitfinex</artifactId>
+      <artifactId>xchange-stream-bitfinex</artifactId>
     </dependency>
     <dependency>
       <groupId>${xchange.groupid}</groupId>
