--- a/pom.xml
+++ b/pom.xml
@@ -213,12 +213,12 @@
     <dropwizard.version>1.3.8</dropwizard.version>
 
     <!--<xchange.groupid>org.knowm.xchange</xchange.groupid> -->
-    <xchange.groupid>com.github.badgerwithagun.XChange</xchange.groupid>
-    <xchange.version>orko-SNAPSHOT</xchange.version>
+    <xchange.groupid>com.gruelbox</xchange.groupid>
+    <xchange.version>4.3.16-SNAPSHOT</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
-    <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>orko-SNAPSHOT</xchange.stream.version>
+    <xchange.stream.groupid>com.gruelbox</xchange.stream.groupid>
+    <xchange.stream.version>4.3.16.1-SNAPSHOT</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
@@ -465,17 +465,17 @@
       </dependency>
       <dependency>
         <groupId>${xchange.stream.groupid}</groupId>
-        <artifactId>xchange-binance</artifactId>
+        <artifactId>xchange-stream-binance</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
         <groupId>${xchange.stream.groupid}</groupId>
-        <artifactId>xchange-bitfinex</artifactId>
+        <artifactId>xchange-stream-bitfinex</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
         <groupId>${xchange.stream.groupid}</groupId>
-        <artifactId>xchange-coinbasepro</artifactId>
+        <artifactId>xchange-stream-coinbasepro</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
