--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@mars/heroku-js-runtime-env": "^3.0.2",
+    "compare-versions": "^3.4.0",
     "connected-react-router": "^6.3.1",
     "cookies-js": "^1.2.3",
     "fetch": "^1.1.0",
@@ -14,6 +15,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.3",
     "react-grid-layout": "^0.16.6",
+    "react-markdown": "^4.0.6",
     "react-page-visibility": "^3.2.1",
     "react-redux": "^6.0.1",
     "react-rnd": "^9.1.2",
