--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -32,7 +32,8 @@
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3",
     "styled-system": "^4.0.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "build-semantic": "cd src/semantic && gulp build-css build-assets",
