--- a/orko-base/pom.xml
+++ b/orko-base/pom.xml
@@ -76,6 +76,10 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.dropwizard</groupId>
+      <artifactId>dropwizard-testing</artifactId>
+    </dependency>
 
     <!-- TODO actually just reactivex -->
     <dependency>
