Enable simulated exchange in default standalone config

--- a/orko-app/example-config.yml
+++ b/orko-app/example-config.yml
@@ -17,6 +17,8 @@ database:
 #   botToken: YOU
 #   chatId: REALLYWANTTHIS
 exchanges:
+  simulated:
+    apiKey: DEMO
   gdax:
     apiKey: 
     secretKey: 
