--- a/pom.xml
+++ b/pom.xml
@@ -224,11 +224,11 @@
 
     <!--<xchange.groupid>org.knowm.xchange</xchange.groupid> -->
     <xchange.groupid>com.gruelbox</xchange.groupid>
-    <xchange.version>4.3.17.1-SNAPSHOT</xchange.version>
+    <xchange.version>4.3.17.1</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.gruelbox</xchange.stream.groupid>
-    <xchange.stream.version>4.3.16.2-SNAPSHOT</xchange.stream.version>
+    <xchange.stream.version>4.3.16.2</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
