--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@
 
     <!--<xchange.groupid>org.knowm.xchange</xchange.groupid> -->
     <xchange.groupid>com.gruelbox</xchange.groupid>
-    <xchange.version>4.3.17.1</xchange.version>
+    <xchange.version>4.3.18.1-SNAPSHOT</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.gruelbox</xchange.stream.groupid>
