--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ matrix:
     - name: "MySQL tests"
       services: mysql
       before_install: mysql -e 'CREATE DATABASE test;'
-      script: mvn -B -U clean test -Dmorf.mysql.noadmin=true -Dspotbugs.skip=true -Dcheckstyle.skip=true -Dtestdb.url=mysql://travis@127.0.0.1/test ${BUILD_ARGS}
+      script: mvn -B -U -Pdbonly clean test -Dskip.failsafe.tests=true -Dmorf.mysql.noadmin=true -Dspotbugs.skip=true -Dcheckstyle.skip=true -Dtestdb.url=mysql://travis@127.0.0.1/test ${BUILD_ARGS}
 
 cache:
   npm: true
