--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
 
     <!--<xchange.groupid>org.knowm.xchange</xchange.groupid> -->
     <xchange.groupid>com.gruelbox</xchange.groupid>
-    <xchange.version>4.3.18.1-SNAPSHOT</xchange.version>
+    <xchange.version>4.3.19.1</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.gruelbox</xchange.stream.groupid>
@@ -246,8 +246,8 @@
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
 
-    <dropwizard-https-redirect-version>0.0.4</dropwizard-https-redirect-version>
-    <dropwizard-guice-box-version>0.0.5</dropwizard-guice-box-version>
+    <dropwizard-https-redirect-version>0.0.5</dropwizard-https-redirect-version>
+    <dropwizard-guice-box-version>0.0.6</dropwizard-guice-box-version>
 
     <!-- Sonar -->
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
