--- a/orko-app/src/main/jib/docker-config.yml
+++ b/orko-app/src/main/jib/docker-config.yml
@@ -17,7 +17,7 @@ telegram:
   botToken: ${TELEGRAM_BOT_TOKEN:-}
   chatId: ${TELEGRAM_CHAT_ID:-}
 database:
-  connectionString: ${JDBC_URL:-h2:file:./orko;DB_CLOSE_DELAY=-1;MVCC=TRUE;DEFAULT_LOCK_TIMEOUT=60000}
+  connectionString: ${JDBC_URL:-h2:file:/app/db/orko;DB_CLOSE_DELAY=-1;MVCC=TRUE;DEFAULT_LOCK_TIMEOUT=60000}
   lockSeconds: ${LOCK_SECONDS:-45}
 exchanges:
   simulated:
