--- a/pom.xml
+++ b/pom.xml
@@ -235,7 +235,7 @@
 
     <!--<xchange.groupid>org.knowm.xchange</xchange.groupid> -->
     <xchange.groupid>com.gruelbox</xchange.groupid>
-    <xchange.version>4.3.19.1</xchange.version>
+    <xchange.version>4.3.19.2-SNAPSHOT</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.gruelbox</xchange.stream.groupid>
